--- a/Textoo_v1.4.0/manifest.json
+++ b/Textoo_v1.4.0/manifest.json
@@ -39,5 +39,15 @@
     "service_worker": "background.js",
     "type": "module"
   },
-  "options_page": "options.html"
+  "options_page": "options.html",
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "icons/*"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ]
 }
